cluster/apps/foundry/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foundry
  labels:
    app.kubernetes.io/name: foundry
spec:
  replicas: 1
  revisionHistoryLimit: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: foundry
  template:
    metadata:
      labels:
        app.kubernetes.io/name: foundry
    spec:
      containers:
        - name: foundry
          image: felddy/foundryvtt:14.368.0
          ports:
            - containerPort: 30000
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
          volumeMounts:
            - name: foundry-data
              mountPath: /data
      volumes:
        - name: foundry-data
          persistentVolumeClaim:
            claimName: foundry-config-pvc
