cluster/apps/foundry/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: foundry
  labels:
    app.kubernetes.io/name: foundry
spec:
  type: ClusterIP
  ports:
    - port: 30000
      targetPort: 30000
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: foundry
